# iros2021_vins_plane

./: .clang-format  .gitignore  README.md
config/euroc/: euroc_config.yaml
config/iphone/: iPhone11_config.yaml  iPhone7_config.yaml  vins_result_no_loop.txt
eigen_stl_containers/: CHANGELOG.rst  CMakeLists.txt  package.xml
eigen_stl_containers/include/eigen_stl_containers/: eigen_stl_containers.h  eigen_stl_map_container.h  eigen_stl_vector_container.h
feature_tracker/src/: parameters.cpp
graph_msgs/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
graph_msgs/msg/: Edges.msg  GeometryGraph.msg
pose_graph/src/: keyframe.cpp  pose_graph.cpp  pose_graph_node.cpp
pose_graph/src/utility/: utility.h
quaterion_math/: readme.md  test.cpp
roslint/: CHANGELOG.rst  CMakeLists.txt  package.xml
roslint/cmake/: roslint-extras.cmake.em
roslint/scripts/: test_wrapper
roslint/src/roslint/: README.md  cpplint.py  cpplint_wrapper.py  pycodestyle_wrapper.py
rviz/: vins.rviz
rviz_visual_tools/: CMakeLists.txt
rviz_visual_tools/include/rviz_visual_tools/: rviz_visual_tools.h
rviz_visual_tools/src/: imarker_simple_demo.cpp  rviz_visual_tools.cpp  rviz_visual_tools_demo.cpp
vins_estimator/: CMakeLists.txt  package.xml
vins_estimator/launch/: iphone11.launch  iphone7.launch  vins_rviz.launch
vins_estimator/src/: estimator.cpp  estimator.h  estimator_node.cpp  feature_manager.cpp  feature_manager.h  parameters.cpp  parameters.h  plane_extract.cpp  plane_extract.hpp
vins_estimator/src/factor/: imu_factor.h  integration_base.h  marginalization_factor.cpp  marginalization_factor.h  pose_local_parameterization.cpp  pose_local_parameterization.h  projection_factor.cpp  projection_factor.h  projection_factor_basalt.cpp  projection_factor_basalt.h  projection_plane_factor.cc  projection_plane_factor.h  projection_td_factor.cpp  projection_td_factor.h  relativatepose_factor.cc  relativepose_factor.h
vins_estimator/src/frontend/: frontend_data.h
vins_estimator/src/initial/: initial_aligment.cpp  initial_alignment.h  initial_ex_rotation.cpp  initial_ex_rotation.h  initial_sfm.cpp  initial_sfm.h  solve_5pts.cpp  solve_5pts.h
vins_estimator/src/plane_detection/: nanoflann.hpp  plane_detection.cc  plane_detection.h
vins_estimator/src/utility/: Twist.h  utility.h  visualization.cpp
vins_estimator/src/utils/: CameraPoseVisualization.cpp  CameraPoseVisualization.h  Twist.h  logging.h  math_utils.h  visualization.cpp  visualization.h
